--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.container{
+  padding-left: 5px;
+}
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
