--- a/src/assets/testo.css
+++ b/src/assets/testo.css
@@ -1,15 +1,15 @@
 body{
     background-color: white;
 }
-h1{
-    font-weight: bold;
-}
 div{
-    width: 544px;
+    width: 550px;
 }
 p{
     padding: 5px;
     background-color: green;
     color: black;
     border-radius: 10px;
+}
+.sottolinea{
+    text-decoration: underline;
 }
